# nlp-without-llm

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  nlp-offline-lab-plan.md  pyproject.toml  run_all.py  run_study.py
docs/: study-plan.md
lab/: contract.py  report.py  study_utils.py
output/: report.html  result_01_language_detection.json  result_02_translate_zh_en.json  result_03_sentiment_customer_review.json  result_04_sentiment_internal_escalation.json  result_05_ner_brands_locations.json  result_06_ner_people_orgs_procurement.json  result_07_classify_email_department.json  result_08_classify_supplier_urgency.json  result_09_classify_feedback_topic.json  result_10_similarity_complaint_lookup.json  result_11_similarity_sop_retrieval.json  result_12_fewshot_email_department.json  result_13_fewshot_supplier_urgency.json  result_14_fewshot_feedback_topic.json  result_15_entity_resolution_fuzzy.json  result_16_entity_resolution_dense.json  result_17_natural_language_inference.json  result_18_extractive_summarization.json  result_19_optical_character_recognition.json  results.json
tests/: test_report.py  test_runner.py
usecases/: 01_classify_email_department.py  01_language_detection.py  02_classify_feedback_topic.py  02_translate_zh_en.py  03_classify_supplier_urgency.py  03_sentiment_customer_review.py  04_sentiment_customer_review.py  04_sentiment_internal_escalation.py  05_ner_brands_locations.py  05_sentiment_internal_escalation.py  06_ner_brands_locations.py  06_ner_people_orgs_procurement.py  07_classify_email_department.py  (+17 more)
(+15 files in other folders)
