[project]
name = "nlp-without-llm"
version = "0.1.0"
description = "Offline pretrained NLP models for travel retail use cases"
readme = "README.md"
authors = [
    { name = "chiaw", email = "chiaweiwoo123@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "sacremoses>=0.1.1",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=5.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
